--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
-  
 
   <body>
 <div class="topnav">
@@ -23,6 +22,12 @@
 <img src="https://cdn.discordapp.com/attachments/1135397413725675592/1392191526422974544/Frame_2.png?ex=686ea2e5&is=686d5165&hm=5f6956ff2c281abc51ef9cabd383ee5521c7a27bb487602651249da202c2d00a&" alt="aboutme" >
     </div>
 
+    <div class="footer">
+      <div class="socialIcons">
+    <a href="https://www.youtube.com/@ddjins"><i class="fa-brands fa-youtube"></i> </a>
+    <a href="https://www.linkedin.com/in/denise-duong-59196530a/"><i class="fa-brands fa-linkedin"></i> </a>
+      </div>
+    
     <script src="script.js"></script>
   </body>
 
