--- a/journey.html
+++ b/journey.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
+  
+  <body>
   <div class="topnav">
     <a class="active" href="index.html">denise's portfolio</a>
     <div class="topnav-right">
@@ -15,8 +17,15 @@
     <a href="journey.html">my journey</a>
     </div>
   </div>
-  
-  <body>
+   <div class ="image2-container">
+  <img src=https://cdn.discordapp.com/attachments/1135397413725675592/1392193878106308739/Frame_3.png?ex=686ea516&is=686d5396&hm=ab11996ff081200806f4e7a734a2f1d6dee5b12a3b3093d9fe6343bfc6f454ae&" alt="journey" >
+      </div>
+
+  <div class="footer">
+    <div class="socialIcons">
+  <a href="https://www.youtube.com/@ddjins"><i class="fa-brands fa-youtube"></i> </a>
+  <a href="https://www.linkedin.com/in/denise-duong-59196530a/"><i class="fa-brands fa-linkedin"></i> </a>
+    </div>
 
     <script src="script.js"></script>
   </body>
