--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -22,8 +23,12 @@
 <img src="https://cdn.discordapp.com/attachments/1135397413725675592/1392187899541328013/Frame1.png?ex=686e9f84&is=686d4e04&hm=00feac6afd0bf517fb60ae1d1c37a0e18cd8acb064dd9b940812ee295375ee49&" alt="mainpage" >
   </div>
   
-  
-  
+  <div class="footer">
+    <div class="socialIcons">
+<a href="https://www.youtube.com/@ddjins"><i class="fa-brands fa-youtube"></i> </a>
+<a href="https://www.linkedin.com/in/denise-duong-59196530a/"><i class="fa-brands fa-linkedin"></i> </a>
+    </div>
+    
   <script src="script.js"></script>
 </body>
 
