--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="image-container">
-<img src="https://cdn.discordapp.com/attachments/1135397413725675592/1392187899541328013/Frame1.png?ex=686e9f84&is=686d4e04&hm=00feac6afd0bf517fb60ae1d1c37a0e18cd8acb064dd9b940812ee295375ee49&" alt="mainpage" >
+<img src="/images/Frame1.png" alt="mainpage" >
   </div>
   
   <div class="footer">
