--- a/journey.html
+++ b/journey.html
@@ -18,7 +18,7 @@
     </div>
   </div>
    <div class ="image2-container">
-  <img src=https://cdn.discordapp.com/attachments/1135397413725675592/1392193878106308739/Frame_3.png?ex=686ea516&is=686d5396&hm=ab11996ff081200806f4e7a734a2f1d6dee5b12a3b3093d9fe6343bfc6f454ae&" alt="journey" >
+  <img src="/images/Frame 3.png" alt="journey" >
       </div>
 
   <div class="footer">
