--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
   </div>
 
     <div class ="image2-container">
-<img src="https://cdn.discordapp.com/attachments/1135397413725675592/1392191526422974544/Frame_2.png?ex=686ea2e5&is=686d5165&hm=5f6956ff2c281abc51ef9cabd383ee5521c7a27bb487602651249da202c2d00a&" alt="aboutme" >
+<img src="/images/Frame 2.png" alt="aboutme" >
     </div>
 
     <div class="footer">
