--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@ git pull origin [main]
   </div>
 
     <div class ="image2-container">
-<img src="/images/Frame 2.png" alt="aboutme" >
+<img src="images/Frame 2.png" alt="aboutme" >
     </div>
 
     <div class="footer">
