--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="image-container">
-<img src="/images/Frame1.png" alt="mainpage" >
+<img src="images/Frame1.png" alt="mainpage" >
   </div>
   
   <div class="footer">
