--- a/journey.html
+++ b/journey.html
@@ -18,7 +18,7 @@
     </div>
   </div>
    <div class ="image2-container">
-  <img src="/images/Frame 3.png" alt="journey" >
+  <img src="images/Frame 3.png" alt="journey" >
       </div>
 
   <div class="footer">
